--- a/Proyecto_Mood_Sense/src/Components/Login/Login.css
+++ b/Proyecto_Mood_Sense/src/Components/Login/Login.css
@@ -28,3 +28,11 @@
   padding: 3%;
   margin-top: 20%;
 }
+
+.status_div{
+  margin: auto;
+  padding: 0;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  padding: 20px;
+  margin: 0;
+}
